@@ -4,6 +4,9 @@ v0.4.0 (unreleased)
 - Provide context manager for running playbooks,
   see: https://gitlab.com/mbukatov/pytest-ansible-playbook/merge_requests/4
 
+- Add runner option ``skip_teardown`` to skip teardown playbooks when test
+  case fails
+
 - Move to python 3.6
 
 v0.3.0 (2016-11-04)
